--- a/vs2012/libP2P.vcxproj
+++ b/vs2012/libP2P.vcxproj
@@ -81,10 +81,15 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\config.h" />
     <ClInclude Include="..\src\libP2P.h" />
+    <ClInclude Include="..\src\log.h" />
+    <ClInclude Include="..\src\socket.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\libP2P.c" />
+    <ClCompile Include="..\src\log.c" />
+    <ClCompile Include="..\src\socket.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
