--- a/vs2012/libP2P.vcxproj.filters
+++ b/vs2012/libP2P.vcxproj.filters
@@ -37,6 +37,9 @@
     <ClInclude Include="..\src\data.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\def.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\libP2P.c">
