--- a/vs2012/libP2P.vcxproj
+++ b/vs2012/libP2P.vcxproj
@@ -87,6 +87,7 @@
     <ClInclude Include="..\src\def.h" />
     <ClInclude Include="..\src\libP2P.h" />
     <ClInclude Include="..\src\log.h" />
+    <ClInclude Include="..\src\module\lan.h" />
     <ClInclude Include="..\src\server\server.h" />
     <ClInclude Include="..\src\socket\socket.h" />
     <ClInclude Include="..\src\thread.h" />
@@ -97,6 +98,7 @@
     <ClCompile Include="..\src\data.c" />
     <ClCompile Include="..\src\libP2P.c" />
     <ClCompile Include="..\src\log.c" />
+    <ClCompile Include="..\src\module\lan.c" />
     <ClCompile Include="..\src\server\server.c" />
     <ClCompile Include="..\src\socket\socket.c" />
     <ClCompile Include="..\src\thread.c" />
