--- a/vs2012/libP2P.vcxproj
+++ b/vs2012/libP2P.vcxproj
@@ -82,28 +82,32 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\config.h" />
+    <ClInclude Include="..\src\basic\config.h" />
+    <ClInclude Include="..\src\basic\def.h" />
+    <ClInclude Include="..\src\basic\log.h" />
+    <ClInclude Include="..\src\basic\tools.h" />
+    <ClInclude Include="..\src\basic\uuid.h" />
     <ClInclude Include="..\src\data.h" />
-    <ClInclude Include="..\src\def.h" />
     <ClInclude Include="..\src\libP2P.h" />
-    <ClInclude Include="..\src\log.h" />
-    <ClInclude Include="..\src\module\lan.h" />
+    <ClInclude Include="..\src\module\lan\lan.h" />
     <ClInclude Include="..\src\server\server.h" />
     <ClInclude Include="..\src\socket\socket.h" />
+    <ClInclude Include="..\src\socket\socket_control.h" />
+    <ClInclude Include="..\src\task.h" />
     <ClInclude Include="..\src\thread.h" />
-    <ClInclude Include="..\src\tools.h" />
-    <ClInclude Include="..\src\uuid.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\basic\log.c" />
+    <ClCompile Include="..\src\basic\tools.c" />
+    <ClCompile Include="..\src\basic\uuid.c" />
     <ClCompile Include="..\src\data.c" />
     <ClCompile Include="..\src\libP2P.c" />
-    <ClCompile Include="..\src\log.c" />
-    <ClCompile Include="..\src\module\lan.c" />
+    <ClCompile Include="..\src\module\lan\lan.c" />
     <ClCompile Include="..\src\server\server.c" />
     <ClCompile Include="..\src\socket\socket.c" />
+    <ClCompile Include="..\src\socket\socket_control.c" />
+    <ClCompile Include="..\src\task.c" />
     <ClCompile Include="..\src\thread.c" />
-    <ClCompile Include="..\src\tools.c" />
-    <ClCompile Include="..\src\uuid.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
