--- a/gtest/gtest.vcxproj
+++ b/gtest/gtest.vcxproj
@@ -102,6 +102,7 @@
     <ClInclude Include="..\src\socket\socket_control.h" />
     <ClInclude Include="..\src\task.h" />
     <ClInclude Include="..\src\thread.h" />
+    <ClInclude Include="gtest_linklist.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -123,7 +124,7 @@
     <ClCompile Include="..\src\task.c" />
     <ClCompile Include="..\src\thread.c" />
     <ClCompile Include="gtest.cpp" />
-    <ClCompile Include="linklist.cpp" />
+    <ClCompile Include="gtest_linklist.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
