--- a/gtest/gtest.vcxproj
+++ b/gtest/gtest.vcxproj
@@ -103,6 +103,7 @@
     <ClInclude Include="..\src\task.h" />
     <ClInclude Include="..\src\thread.h" />
     <ClInclude Include="gtest_linklist.h" />
+    <ClInclude Include="gtest_thread.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -125,6 +126,7 @@
     <ClCompile Include="..\src\thread.c" />
     <ClCompile Include="gtest.cpp" />
     <ClCompile Include="gtest_linklist.cpp" />
+    <ClCompile Include="gtest_thread.cpp" />
     <ClCompile Include="stdafx.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
