--- a/gtest/gtest.vcxproj.filters
+++ b/gtest/gtest.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="gtest_linklist.h">
       <Filter>原始程式檔</Filter>
     </ClInclude>
+    <ClInclude Include="gtest_thread.h">
+      <Filter>原始程式檔</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -144,6 +147,9 @@
       <Filter>src\basic</Filter>
     </ClCompile>
     <ClCompile Include="gtest_linklist.cpp">
+      <Filter>原始程式檔</Filter>
+    </ClCompile>
+    <ClCompile Include="gtest_thread.cpp">
       <Filter>原始程式檔</Filter>
     </ClCompile>
   </ItemGroup>
